[gd_scene load_steps=6 format=3 uid="uid://vhvnvkb3qn17"]

[ext_resource type="Script" uid="uid://dovk8nspkia1s" path="res://SceneManager/scripts/gameplay_tips.gd" id="1_8ien3"]

[sub_resource type="Animation" id="Animation_i0g78"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Tip:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_xe2n1"]
resource_name = "fade_in"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Tip:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}

[sub_resource type="Animation" id="Animation_spyu8"]
resource_name = "fade_out"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Tip:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtrgv"]
_data = {
&"RESET": SubResource("Animation_i0g78"),
&"fade_in": SubResource("Animation_xe2n1"),
&"fade_out": SubResource("Animation_spyu8")
}

[node name="GameplayTips" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ien3")
metadata/_edit_group_ = true

[node name="TipsTimer" type="Timer" parent="."]

[node name="TipsAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rtrgv")
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 30

[node name="TipLabel" type="Label" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Tips:  "
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Tip" type="Label" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
autowrap_mode = 1
